fixed about images, aligned quotes

--- a/styles/Quotes.module.css
+++ b/styles/Quotes.module.css
@@ -2,6 +2,7 @@
     width: 75vw;
     height: 250px;
     margin-block: 3rem;
+    margin-left: -2rem;
     padding: 1rem 1rem;
     background-color: hsl(198, 100%, 80%);
     border-radius: 1rem;
